--- a/BMI.html
+++ b/BMI.html
@@ -7,8 +7,46 @@
   <link rel="stylesheet" href="BMI.css">
 </head>
 <body>
-  <div class="container">
-    <h1>BMI Calculator</h1>
+
+  <h1 id="title">BMI Calculator</h1><br>
+
+  <div class="slideshow-container">
+
+    <!-- Full-width images with number and caption text -->
+    <div class="mySlides fade">
+      <div class="numbertext">1 / 3</div>
+      <img src="images/BMI Calculator.jpeg" style="width:100%">
+      <div class="text">Caption Text</div>
+    </div>
+  
+    <div class="mySlides fade">
+      <div class="numbertext">2 / 3</div>
+      <img src="images/Calculate BMI.jpeg" style="width:100%">
+      <div class="text">Caption Two</div>
+    </div>
+  
+    <div class="mySlides fade">
+      <div class="numbertext">3 / 3</div>
+      <img src="images/Body detox.jpeg" style="width:100%">
+      <div class="text">Caption Three</div>
+    </div>
+  
+    <!-- Next and previous buttons -->
+    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+  </div>
+  <br>
+  
+  <!-- The dots/circles -->
+  <div style="text-align:center">
+    <span class="dot" onclick="currentSlide(1)"></span>
+    <span class="dot" onclick="currentSlide(2)"></span>
+    <span class="dot" onclick="currentSlide(3)"></span>
+  </div>
+  
+      
+  <center><div class="container">
+
     <form id="bmiForm">
       <label for="weight">Weight (kg):</label>
       <input type="number" id="weight" placeholder="Enter your weight" required>
@@ -22,7 +60,60 @@
       <p>Your BMI: <span id="bmiValue">--</span></p>
       <p>Status: <span id="bmiStatus">--</span></p>
     </div>
+  </div></center>
+  <div id="explanation">
+      <button class="def">What is BMI?</button>
+  <div class="panel">
+    <p>BMI stands for Body Mass Index, a simple 
+      calculation used to assess whether a person 
+      has a healthy weight for their height. It's 
+      commonly used as a screening tool to categorize 
+      individuals into weight categories that may 
+      lead to health problems.
+    </p>
   </div>
+
+  <button class="def">BMI Formula</button>
+  <div class="panel">
+    <p>
+    <center><img src="images/image.png" ></center>
+    </p>
+  </div>
+
+  <button class="def">BMI Categories</button>
+  <div class="panel">
+    <p>
+      <b>Underweight:</b> BMI < 18.5<br><br>
+      <b>Normal weight:</b> 18.5–24.9<br><br>
+      <b>Overweight:</b> 25–29.9<br><br>
+      <b>Obesity:</b> BMI ≥ 30<br><br>
+    </p>
+    
+  </div>
+  <button class="def">Tips for Maintaining a Healthy BMI</button>
+  <div class="panel">
+    <p>
+      <h2>Adopt a Balanced Diet</h2>
+  <h4>Focus on whole foods:</h4> Include fruits, vegetables, whole grains, lean proteins, and healthy fats.<br>
+  <h4>Avoid processed foods:</h4> Limit sugary drinks, fast food, and snacks high in salt or saturated fats.
+  Portion control: Use smaller plates or portion guides to prevent overeating.<br>
+
+      <h2>Stay Physically Active</h2>
+  <h4>Cardiovascular exercises:</h4> Activities like walking, running, cycling, or swimming help burn calories.<br>
+  <h4>Strength training:</h4> Builds muscle, which can boost your metabolism.
+  Daily movement: Incorporate small habits like taking stairs, walking instead of driving short distances, or doing household chores.<br>
+
+      <h2>Avoid Crash Diets</h2>
+  Focus on sustainable, long-term changes instead of quick fixes or extreme diets.
+  Rapid weight loss often results in regaining the weight later.<br>
+
+      <h2>Understand Your Unique Needs</h2>
+  Tailor your diet and exercise to your lifestyle, age, and medical conditions.
+  Consider consulting a nutritionist or personal trainer for personalized advice.
+    </p>
+  </div>
+</div>
+
   <script src="BMI.js"></script>
 </body>
 </html>
