--- a/BMI.html
+++ b/BMI.html
@@ -7,12 +7,12 @@
   <link rel="stylesheet" href="BMI.css">
 </head>
 <body>
-
+  <!-- first the title and the slideshow  -->
   <h1 id="title">BMI Calculator</h1><br>
 
   <div class="slideshow-container">
 
-    <!-- Full-width images with number and caption text -->
+  
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
       <img src="images/BMI Calculator.jpeg" style="width:100%">
@@ -29,13 +29,14 @@
       <div class="numbertext">3 / 3</div>
       <img src="images/Body detox.jpeg" style="width:100%">
       <div class="text">Caption Three</div>
-    </div>
-  
-    <!-- Next and previous buttons -->
-    <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
-    <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div> 
   </div>
   <br>
+  <!-- Next and previous buttons -->
+  <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+  <a class="next" onclick="plusSlides(1)">&#10095;</a>
+</div>
+<br>
   
   <!-- The dots/circles -->
   <div style="text-align:center">
@@ -45,7 +46,8 @@
   </div>
   
       
-  <center><div class="container">
+  <center>
+    <div class="container">
 
     <form id="bmiForm">
       <label for="weight">Weight (kg):</label>
@@ -60,7 +62,8 @@
       <p>Your BMI: <span id="bmiValue">--</span></p>
       <p>Status: <span id="bmiStatus">--</span></p>
     </div>
-  </div></center>
+  </div>
+</center>
   <div id="explanation">
       <button class="def">What is BMI?</button>
   <div class="panel">
