made some modifications about folders organization and about images

--- a/BMI.html
+++ b/BMI.html
@@ -15,19 +15,19 @@
   
     <div class="mySlides fade">
       <div class="numbertext">1 / 3</div>
-      <img src="images/BMI Calculator.jpeg" style="width:100%">
+      <img src="BMI Calculator.jpeg" style="width:100%">
       <div class="text">Caption Text</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">2 / 3</div>
-      <img src="images/Calculate BMI.jpeg" style="width:100%">
+      <img src="Calculate BMI.jpeg" style="width:100%">
       <div class="text">Caption Two</div>
     </div>
   
     <div class="mySlides fade">
       <div class="numbertext">3 / 3</div>
-      <img src="images/Body detox.jpeg" style="width:100%">
+      <img src="Body detox.jpeg" style="width:100%">
       <div class="text">Caption Three</div>
     </div> 
   </div>
@@ -79,7 +79,7 @@
   <button class="def">BMI Formula</button>
   <div class="panel">
     <p>
-    <center><img src="images/image.png" ></center>
+    <center><img src="image.png" ></center>
     </p>
   </div>
 
