feat: Major UI/UX improvements and readability enhancements
- Slideshow improvements:
  * Fixed timing and navigation issues
  * Added smooth animations
  * Optimized navigation buttons

- Explanation section improvements:
  * New panel design with light gray background
  * Black text for better readability
  * Added hover effects and animations
  * Organized content in bullet points
  * Better visual hierarchy for headings

- Color and contrast improvements:
  * More harmonious color palette
  * Better contrast for readability
  * Added subtle shadows and visual effects
  * Softer colors for eye comfort

- Input validation improvements:
  * More detailed error messages
  * Better visual styling for error messages
  * Stricter value validation

- General improvements:
  * More modern and professional design
  * Enhanced user experience
  * More intuitive interface
  * Improved responsive design

--- a/index.html
+++ b/index.html
@@ -65,57 +65,83 @@
   </div>
 </center>
   <div id="explanation">
-      <button class="def">What is BMI?</button>
-  <div class="panel">
-    <p>BMI stands for Body Mass Index, a simple 
-      calculation used to assess whether a person 
-      has a healthy weight for their height. It's 
-      commonly used as a screening tool to categorize 
-      individuals into weight categories that may 
-      lead to health problems.
-    </p>
+    <button class="def">What is BMI?</button>
+    <div class="panel">
+      <p>BMI (Body Mass Index) is a simple calculation used to assess whether a person has a healthy weight for their height. It's commonly used as a screening tool to categorize individuals into weight categories that may lead to health problems.</p>
+    </div>
+
+    <button class="def">BMI Formula</button>
+    <div class="panel">
+      <p>
+        <img src="image.png" alt="BMI Formula">
+      </p>
+    </div>
+
+    <button class="def">BMI Categories</button>
+    <div class="panel">
+      <p>
+        <ul>
+          <li><b>Underweight:</b> BMI < 18.5</li>
+          <li><b>Normal weight:</b> 18.5–24.9</li>
+          <li><b>Overweight:</b> 25–29.9</li>
+          <li><b>Obesity:</b> BMI ≥ 30</li>
+        </ul>
+      </p>
+    </div>
+
+    <button class="def">Tips for Maintaining a Healthy BMI</button>
+    <div class="panel">
+      <p>
+        <h2>Adopt a Balanced Diet</h2>
+        <h4>Focus on whole foods:</h4>
+        <ul>
+          <li>Include fruits, vegetables, whole grains, lean proteins, and healthy fats</li>
+          <li>Choose nutrient-dense foods over empty calories</li>
+        </ul>
+
+        <h4>Avoid processed foods:</h4>
+        <ul>
+          <li>Limit sugary drinks and fast food</li>
+          <li>Reduce snacks high in salt or saturated fats</li>
+          <li>Practice portion control using smaller plates</li>
+        </ul>
+
+        <h2>Stay Physically Active</h2>
+        <h4>Cardiovascular exercises:</h4>
+        <ul>
+          <li>Walking, running, cycling, or swimming</li>
+          <li>Aim for at least 150 minutes of moderate activity per week</li>
+        </ul>
+
+        <h4>Strength training:</h4>
+        <ul>
+          <li>Build muscle to boost metabolism</li>
+          <li>Include resistance exercises 2-3 times per week</li>
+        </ul>
+
+        <h4>Daily movement:</h4>
+        <ul>
+          <li>Take stairs instead of elevators</li>
+          <li>Walk for short distances instead of driving</li>
+          <li>Stay active during household chores</li>
+        </ul>
+
+        <h2>Avoid Crash Diets</h2>
+        <ul>
+          <li>Focus on sustainable, long-term changes</li>
+          <li>Avoid extreme diets and quick fixes</li>
+          <li>Set realistic goals for gradual weight loss</li>
+        </ul>
+
+        <h2>Understand Your Unique Needs</h2>
+        <ul>
+          <li>Tailor your diet and exercise to your lifestyle</li>
+          <li>Consider your age and medical conditions</li>
+          <li>Consult professionals for personalized advice</li>
+        </ul>
+      </p>
+    </div>
   </div>
-
-  <button class="def">BMI Formula</button>
-  <div class="panel">
-    <p>
-    <center><img src="image.png" ></center>
-    </p>
-  </div>
-
-  <button class="def">BMI Categories</button>
-  <div class="panel">
-    <p>
-      <b>Underweight:</b> BMI < 18.5<br><br>
-      <b>Normal weight:</b> 18.5–24.9<br><br>
-      <b>Overweight:</b> 25–29.9<br><br>
-      <b>Obesity:</b> BMI ≥ 30<br><br>
-    </p>
-    
-  </div>
-  <button class="def">Tips for Maintaining a Healthy BMI</button>
-  <div class="panel">
-    <p>
-      <h2>Adopt a Balanced Diet</h2>
-  <h4>Focus on whole foods:</h4> Include fruits, vegetables, whole grains, lean proteins, and healthy fats.<br>
-  <h4>Avoid processed foods:</h4> Limit sugary drinks, fast food, and snacks high in salt or saturated fats.
-  Portion control: Use smaller plates or portion guides to prevent overeating.<br>
-
-      <h2>Stay Physically Active</h2>
-  <h4>Cardiovascular exercises:</h4> Activities like walking, running, cycling, or swimming help burn calories.<br>
-  <h4>Strength training:</h4> Builds muscle, which can boost your metabolism.
-  Daily movement: Incorporate small habits like taking stairs, walking instead of driving short distances, or doing household chores.<br>
-
-      <h2>Avoid Crash Diets</h2>
-  Focus on sustainable, long-term changes instead of quick fixes or extreme diets.
-  Rapid weight loss often results in regaining the weight later.<br>
-
-      <h2>Understand Your Unique Needs</h2>
-  Tailor your diet and exercise to your lifestyle, age, and medical conditions.
-  Consider consulting a nutritionist or personal trainer for personalized advice.
-    </p>
-  </div>
-</div>
 
   <script src="BMI.js"></script>
 </body>
